# FEM1D-Test

./: .gitignore  README.md
FEM1D-Test/: CA1_Order1_Problem1.h5  CA1_Order2_Problem1.h5  CA1_Order3_Problem1.h5  CMakeCache.txt  CMakeLists.txt  FEM1.h  FEM1D-Test  FEM1D-Test-ln.sln  FEM1D-Test-ln.vcxproj  FEM1D-Test.cpp  FEM1D-Test.sln  FEM1D-Test.vcxproj  FEM1D-Test.vcxproj.filters  Makefile  cmake_install.cmake  solution_1_o1.vtk  solution_1_o2.vtk  solution_1_o3.vtk  stdafx.cpp
FEM1D-Wave/: CMakeLists.txt  FEM1D-Wave.cpp  FEM1D-Wave.vcxproj  FEM1D-Wave.vcxproj.filters  FEM1DGauSrc.cpp  FEM1DGauSrc.h  FEM1DWave.cpp  FEM1DWave.h
FEM1D-ln/: FEM1D-ln.vcxproj
